Add inter dependencies

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0"
+        "php": ">=7.4.0",
+        "aedart/athenaeum-contracts": "4.0.x-dev",
+        "aedart/athenaeum-utils": "4.0.x-dev"
     },
     "autoload": {
         "psr-4": {
