--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     ],
     "require": {
         "php": ">=7.4.0",
-        "aedart/athenaeum-contracts": "4.0.x-dev",
-        "aedart/athenaeum-utils": "4.0.x-dev"
+        "aedart/athenaeum-contracts": "^4.0.x-dev",
+        "aedart/athenaeum-utils": "^4.0.x-dev"
     },
     "autoload": {
         "psr-4": {
