Change inter-dependencies to allow local test
Ups... this should had been done from the very beginning.

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     ],
     "require": {
         "php": ">=7.4.0",
-        "aedart/athenaeum-contracts": "^4.0.x-dev",
-        "aedart/athenaeum-utils": "^4.0.x-dev"
+        "aedart/athenaeum-contracts": "dev-master",
+        "aedart/athenaeum-utils": "dev-master"
     },
     "autoload": {
         "psr-4": {
